# data-to-ai

./: .gitignore  GenAI_in_BigQuery.ipynb  README.md  a2as.yaml
.github/workflows/: jupytext.yml
agents/maintenance-scheduler/: README.md  pyproject.toml  test_deployed_agent.py
agents/maintenance-scheduler/deployment/: deploy.py
agents/maintenance-scheduler/maintenance_explorer/: README.md  agent.py  config.py  prompts.py  requirements.txt
agents/maintenance-scheduler/maintenance_scheduler/: agent.py  config.py  prompts.py
agents/maintenance_scheduler/: README.md  pyproject.toml
agents/maintenance_scheduler/deployment/: deploy.py
agents/maintenance_scheduler/eval/: test_eval.py
agents/maintenance_scheduler/maintenance_scheduler/: agent.py  config.py  (+1 more)
agents/mcp-toolbox/: maintenance-scheduler-tools.yaml
agents/mcptoolbox/: maintenance-scheduler-tools.yaml
infrastructure/project-setup/: main.tf
infrastructure/terraform/: bigquery-procedure.tf  bigquery-table.tf  variables.tf
labs/: adk_agents_and_bigquery.ipynb  genai_in_bigquery.ipynb
labs/agents/: ADK-and-BigQuery.md
notebooks/: .pre-commit-config.yaml  generate_synthetic_multimodal_data.ipynb  generate_synthetic_multimodal_data.py  jupytext.toml  multimodal_analysis_search.ipynb  multimodal_search_evaluation.ipynb  multimodal_search_evaluation.py  part_1_multimodal_analysis_search.ipynb  part_1_multimodal_analysis_search.py  part_2_large_scale_understanding.ipynb  part_2_large_scale_understanding.py  part_3_time_series_forecasting.ipynb  part_3_time_series_forecasting.py  pyproject.toml
(+16 files in other folders)
